--- a/index.html
+++ b/index.html
@@ -4,27 +4,40 @@
   <meta charset="UTF-8">
   <title>2048 for ADDICTS!</title>
   <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="css/main2.css">
 </head>
 <body>
-  <h1> 2048 for ADDICTS!</h1>
 
-  <div class="cell r0 c0"><div></div></div>
-  <div class="cell r0 c1"><div></div></div>
-  <div class="cell r0 c2"><div></div></div>
-  <div class="cell r0 c3"><div></div></div>
-  <div class="cell r1 c0"><div></div></div>
-  <div class="cell r1 c1"><div></div></div>
-  <div class="cell r1 c2"><div></div></div>
-  <div class="cell r1 c3"><div></div></div>
-  <div class="cell r2 c0"><div></div></div>
-  <div class="cell r2 c1"><div></div></div>
-  <div class="cell r2 c2"><div></div></div>
-  <div class="cell r2 c3"><div></div></div>
-  <div class="cell r3 c0"><div></div></div>
-  <div class="cell r3 c1"><div></div></div>
-  <div class="cell r3 c2"><div></div></div>
-  <div class="cell r3 c3"><div></div></div>
+  <div class="container">
+    <div class="row">
+
+      <div class="col-md-6 col-md-offset-3">
+        <h1> 2048 for ADDICTS!</h1>
+
+        <div class="board">
+          <div class="cell r0 c0"><div>2048</div></div>
+          <div class="cell r0 c1"><div>2048</div></div>
+          <div class="cell r0 c2"><div>2048</div></div>
+          <div class="cell r0 c3"><div>2048</div></div>
+          <div class="cell r1 c0"><div>2048</div></div>
+          <div class="cell r1 c1"><div>2048</div></div>
+          <div class="cell r1 c2"><div>2048</div></div>
+          <div class="cell r1 c3"><div>2048</div></div>
+          <div class="cell r2 c0"><div>2048</div></div>
+          <div class="cell r2 c1"><div>2048</div></div>
+          <div class="cell r2 c2"><div>2048</div></div>
+          <div class="cell r2 c3"><div>2048</div></div>
+          <div class="cell r3 c0"><div>2048</div></div>
+          <div class="cell r3 c1"><div>2048</div></div>
+          <div class="cell r3 c2"><div>2048</div></div>
+          <div class="cell r3 c3"><div>2048</div></div>
+        </div>
+
+      </div>
+
+    </div>
+
+  </div>
 
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
   <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
