added customizations, still work in progress

--- a/index.html
+++ b/index.html
@@ -11,7 +11,17 @@
   <div class="row">
 
     <div>
-      <h1> 2048 for ADDICTS!</h1>
+      <h1>
+        <p>2048 for <span>addicts<span></p>
+        <button class="newGame">New Game</button>
+
+        <div class="timer">Timer<p>30:00</p></div>
+
+        <div class="score">
+          <p>Score</p>
+          <p>0</p>
+        </div>
+      </h1>
 
       <div class="board">
         <div class="cell r0 c0"><div></div></div>
