added scoring, refined customization

--- a/index.html
+++ b/index.html
@@ -12,15 +12,12 @@
 
     <div>
       <h1>
-        <p>2048 for <span>addicts<span></p>
+        <p>2048 for <span>Addicts<span></p>
         <button class="newGame">New Game</button>
 
         <div class="timer">Timer<p>30:00</p></div>
 
-        <div class="score">
-          <p>Score</p>
-          <p>0</p>
-        </div>
+        <div class="score">Score<p>0</p></div>
       </h1>
 
       <div class="board">
