--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>2048 for ADDICTS!</title>
   <link href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="css/main2.css">
+  <link rel="shortcut icon" href="http://faviconist.com/icons/0b767661244021079052644320e4f613/favicon.ico" />
 </head>
 <body>
 
